fixed scroll and collapse

--- a/src/containers/views/KnutselTips/KnutselTips.scss
+++ b/src/containers/views/KnutselTips/KnutselTips.scss
@@ -1,7 +1,20 @@
 @import "../../../variables.scss";
 
+.creation-title {
+  font-family: Poppins, -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color: #3274ff;
+  font-size: 6rem;
+  font-weight: 700;
+  text-align: center;
+  margin-top: 5rem;
+  margin-bottom: 2rem; }
+
+
 .knutseltips {
+  overflow: hidden;
   .card.knutseltip {
+    cursor: pointer;
+    user-select: none;
     height: 400px;
     border-radius: 2.5rem;
     border: 1rem solid $brand-blue;
